--- a/src/section/portfolio_section/portfolioitem.css
+++ b/src/section/portfolio_section/portfolioitem.css
@@ -1,6 +1,5 @@
 .portfolio-item{
     width: 100%;
-    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -11,11 +10,11 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    width: 90%;
+    width: 95%;
     height: 100%;
     z-index: 1;
     border-radius: 1.5rem;   
-    margin: 50px;
+    margin: 50px 0;
     text-align: center;
     display: flex;
     justify-content: center;
