--- a/src/section/portfolio_section/portfoliosection.css
+++ b/src/section/portfolio_section/portfoliosection.css
@@ -1,54 +1,44 @@
-.portfolio-section{
+.portfolio-section {
     width: 100%;
     min-height: 100vh;
     display: flex;
     justify-content: center;
-    align-items: center;
-    overflow-x: hidden;
-    overflow: hidden;
-    margin: 10vh 0;
+    align-items: flex-start;
+    margin: 20vh 0;
 }
 
-.portfolio-container{
+.portfolio-container {
     width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-direction: row;
-    overflow: hidden;
     min-height: 100vh;
     position: relative;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0;
 }
 
-.portfolio-title{
-    width: 50%;
-    min-height: 100vh;
+.portfolio-title {
+    height: fit-content;
+    padding: 5vh 0 20vh 0;
+    position: sticky;
+    top: 10%;
+    left: 0;
     display: flex;
-    justify-content: center;
-    align-items: flex-start;
     flex-direction: column;
-    z-index: 2;
-    position: relative;
     row-gap: 1rem;
     pointer-events: none;
 }
 
-.portfolio-content{
-    width: 55%;
+.portfolio-content {
+    height: auto;
+    padding: 5vh 5%;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
-    z-index: 2;
-    position: relative;
+    gap: 200px;
     pointer-events: none;
-    overflow-y: auto;
-    scrollbar-width: none;  /* Firefox */
-    -ms-overflow-style: none;  /* IE and Edge */
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
 .portfolio-content::-webkit-scrollbar {
     display: none;
 }
@@ -59,7 +49,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: -1;
+    z-index: 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -69,69 +59,72 @@
 .dial {
     position: absolute;
     left: calc(-40%);
-    top: calc(0% - 100px);
+    top: calc(0% - 200px);
     width: 60vw;
     height: auto;
     pointer-events: none;
     transform-origin: center center;
     will-change: transform;
+    opacity: 0.15;
+    transform: rotate(10deg);
 }
 
-.portfolio-svg{
+.portfolio-svg {
     width: 50%;
     height: auto;
-    position: absolute;
-    top: 10%;
-    left: 0;
     pointer-events: none;
 }
 
-.portfolio-title-text{
+.portfolio-title-text {
     font-size: 4vw;
     font-weight: 600;
     font-family: 'nulshock';
     padding: 0 5rem;
-    z-index: 2;
+    /* z-index: 2; */
     pointer-events: none;
 }
 
-.portfolio-title-description{
+.portfolio-title-description {
     font-size: 1vw;
     font-weight: 400;
     font-family: 'inter';
     padding: 0 5rem;
     color: #a4a4a4;
-    z-index: 2;
+    /* z-index: 2; */
     pointer-events: none;
 }
 
-.portfolio-content-mobile{
+.portfolio-content-mobile {
     display: none;
 }
 
-.portfolio-title-mobile{
+.portfolio-title-mobile {
     display: none;
 }
 
 @media (min-width:1024px) and (max-width: 1250px) {
-    .dial{
-        left: calc(-40%);
-        top: calc(20% - 100px);
+    .dial {
+        top: calc(0% - 100px);
     }
-    .portfolio-title-text{
+    .portfolio-title-text {
         font-size: 4.2vw;
+        padding: 0 3rem;
     }
-    .portfolio-title-description{
+    .portfolio-title-description {
         font-size: 1.5vw;
+        padding: 0 3rem;
     }
-    .portfolio-svg{
-        top: 20%;
-        width: 60%;
+    .portfolio-content {
+        padding: 5vh 2%;
+    }
+    .portfolio-title {
+        padding: 0 0 15vh 0;
     }
 }
 
 @media (max-width: 1024px) {
     .portfolio-container{
+        display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
@@ -152,7 +145,7 @@
         row-gap: 2rem;
         width: 100%;
         height: 40vh;
-        margin: 2rem 0;
+        margin: 2rem 0 2rem 0;
     }
     .portfolio-content-mobile{
         display: flex;
@@ -163,21 +156,12 @@
         height: auto;
         text-align: center;
     }
-
-    .pin-spacer{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: auto !important;
-        padding: 0 !important;
-        transform: none !important;
-    }
     .portfolio-content{
        display: none;
     }
     .dial{
         left: calc(-35%);
-        top: calc(5% - 100px);
+        top: calc(0% - 100px);
         width: 160%;
     }
     .portfolio-title-text{
@@ -192,14 +176,9 @@
     }
     .portfolio-svg {
         position:absolute ;
-        top: 5%;
+        top: 0%;
         left: 0%;
-        width: 45%;
-    }
-    .pin-spacer {
-        height: auto !important;
-        padding: 0 !important;
-        transform: none !important;
+        width: 40%;
     }
 }
 
@@ -211,6 +190,7 @@
     }
     .portfolio-title-text{
         font-size: 5vw;
+        padding: 0 2rem;
     }
     .portfolio-title-description{
         font-size: 2.5vw;
@@ -219,7 +199,7 @@
         width: 50%;
     }
     .portfolio-title-mobile{
-        margin: 4rem 0 0 2rem;
+        margin: 2rem 0 0 0;
     }
     .portfolio-content-mobile{
         margin: 2rem 0;
@@ -229,14 +209,14 @@
 /* Additional adjustments for smaller screens */
 @media (max-width: 425px) {
     .portfolio-section{
-        margin: 6vh 0;
+        margin: 1vh 0;
     }
     .portfolio-svg{
         width: 70%;
-        top: 10%;
+        top: 8%;
     }
     .portfolio-title-mobile{
-        margin: 4rem 0 0 2rem;
+        margin: 4rem 0 0 0;
     }
     .portfolio-title-text{
         font-size: 7vw;
